<resources>
    <string name="app_name">Activity Recognition PoC</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">Aun no estás registrado? Regístrate</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repetir Password</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="dni">DNI</string>
    <string name="logo">Logo</string>
    <string name="send">Enviar</string>
    <string name="title_activity_signup">Registro de Usuario</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_collect">Recolección de métricas</string>
    <string name="title_activity_predict">Inferencia</string>
    <string name="logout">LOGOUT</string>
    <string name="reset_model">RESETEAR EL MODELO</string>
    <string name="train_model">ENTRENAR EL MODELO</string>
    <string name="collect_user_1">CAPTURA USUARIO 1</string>
    <string name="collect_user_2">CAPTURA USUARIO 2</string>
    <string name="predict_user">PREDICCION DE USUARIO</string>
    <string name="text_collect"> Las tres leyes de la robótica. Un robot no debe dañar a un ser humano o, por su inacción, dejar que un ser humano sufra daño. Un robot debe obedecer las órde nes que le son dadas por un ser humano, excepto cuando estas órdenes están en oposición con la primera. Un robot debe proteger su propia existencia, hasta donde esta protección no esté en conflicto con la primera o segunda Leyes.</string>
    <string name="hint_collect_text">Ingrese el texto de arriba.</string>
    <string name="prediction_label_default">\?</string>
    <string name="finish">FINALIZAR</string>
    <string name="text_instructions_collect">La captura de datos sera de 60 paquetes de datos de los sensores. Durará aproximadamente 1 minuto. Ingrese el texto debajo si lo desea, o bien realice alguna acción como moverse, caminar, etc, para que el modelo aprenda a reconocerlas.</string>
    <string name="text_instructions_prediction">Relice alguna acción como moverse, caminar, o ingrese el texto debajo para que el modelo pueda reconocerlo.</string>
    <string name="data_packets">Paquetes enviados: %d</string>
    <string name="offline_error_msg">Sin conexión a Internet. Inténtelo de nuevo más tarde.</string>
    <string name="end_of_data_collection_msg">Fin de la captura de datos</string>
    <string name="accept_btn_msg">COMENZAR</string>
    <string name="last_predictions_label">ULTIMAS 10 PREDICCIONES</string>
    <string name="last_predictions_title">Últimas 10 predicciones</string>
</resources>
